Add support using pooled direct buffers for Redis commands #820 + Trivial enhancements