@@ -76,7 +76,7 @@ class UserStatusServiceIT extends BaseIntegrationTest {
                         .build());
         RedisProperties redisProperties = new RedisProperties()
                 .toBuilder()
-                .uriList(List.of(String.format("redis://%s:%d", ENV.getRedisHost(), ENV.getRedisPort())))
+                .uriList(List.of("redis://%s:%d".formatted(ENV.getRedisHost(), ENV.getRedisPort())))
                 .build();
         TurmsRedisClientManager manager = new TurmsRedisClientManager(redisProperties, USER_SESSIONS_STATUS_CODEC_CONTEXT);
         USER_STATUS_SERVICE = new UserStatusService(node,
